--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,9 @@
+cmake_minimum_required(VERSION 2.8)
+
 project(kmsc-endpoints)
 
-add_executable(kmsc-endpoints main.cpp)
+add_subdirectory(src)
 
+add_executable(test-endpoints main.c)
+
+target_link_libraries(test-endpoints kmsc-endpoints)
