Add pedantic compilation and solve warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 
 project(kmsc-endpoints)
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic -Wall")
+
 add_subdirectory(src)
 
 add_subdirectory(test)
