--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 add_executable(test-endpoints main.c)
+add_executable(test_sdp test_sdp.c)
 
 find_package(PkgConfig)
 
@@ -16,5 +17,9 @@ target_link_libraries(test-endpoints kmsc-test-endpoints)
 
 include_directories(test-endpoints ${kmsc-endpoints_SOURCE_DIR}/src/core)
 include_directories(test-endpoints kmsc-test-endpoints)
+
+target_link_libraries(test_sdp kmsc-core)
+
+include_directories(test_sdp ${kmsc-endpoints_SOURCE_DIR}/src/core)
 
 add_subdirectory(kmsc-test-endpoints)
