Allow installing headers and shared library

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -13,3 +13,7 @@ target_link_libraries(kmsc-core ${GLIB2_LIBRARIES})
 pkg_check_modules(GSTREAMER REQUIRED gstreamer-0.10>=0.10.35)
 include_directories(kmsc-core ${GSTREAMER_INCLUDE_DIRS})
 target_link_libraries(kmsc-core ${GSTREAMER_LIBRARIES})
+
+file(GLOB INCLUDES_CORE "." "*.h")
+
+INSTALL(FILES ${INCLUDES_CORE} DESTINATION ${INCLUDE_PREFIX} PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
