--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 2.8)
 project(kmsc-endpoints)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic -Wall")
+set(CUSTOM_PREFIX "kmsc")
+set(INCLUDE_PREFIX "include/${CUSTOM_PREFIX}")
+set(LIB_PREFIX "lib/${CUSTOM_PREFIX}")
 
 add_subdirectory(src)
 
