Do not build static libraries, just the shared library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_subdirectory(core)
-
-add_subdirectory(rtp)
-
 aux_source_directory("core" CORE)
 aux_source_directory("rtp" RTP)
 
@@ -22,3 +18,11 @@ target_link_libraries(kmsclib ${GSTREAMER_LIBRARIES})
 include_directories(kmsclib core rtp)
 
 install(TARGETS kmsclib LIBRARY DESTINATION ${LIB_PREFIX} PERMISSIONS OWNER_EXECUTE OWNER_READ GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+
+file(GLOB INCLUDES_CORE "core/*.h")
+
+install(FILES ${INCLUDES_CORE} DESTINATION ${INCLUDE_PREFIX} PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+
+file(GLOB INCLUDES_RTP "rtp/*.h")
+
+install(FILES ${INCLUDES_RTP} DESTINATION ${INCLUDE_PREFIX}/rtp PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
