Add test for rtp endpoints

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 
 add_executable(test-endpoints main.c)
 add_executable(test_sdp test_sdp.c)
+add_executable(test_rtp test_rtp.c)
 
 find_package(PkgConfig)
 
@@ -19,7 +20,10 @@ include_directories(test-endpoints ${kmsc-endpoints_SOURCE_DIR}/src/core)
 include_directories(test-endpoints kmsc-test-endpoints)
 
 target_link_libraries(test_sdp kmsclib)
-
 include_directories(test_sdp ${kmsc-endpoints_SOURCE_DIR}/src/core)
+
+target_link_libraries(test_rtp kmsclib)
+include_directories(test_rtp ${kmsc-endpoints_SOURCE_DIR}/src/core)
+include_directories(test_rtp ${kmsc-endpoints_SOURCE_DIR}/src)
 
 add_subdirectory(kmsc-test-endpoints)
