Move memory test to a library

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 2.8)
 
+add_library(test_memory memory.c)
+
 add_executable(test-endpoints main.c)
 add_executable(test_sdp test_sdp.c)
-add_executable(test_rtp test_rtp.c memory.c)
-add_executable(test_rtp_connection test_rtp_connection.c memory.c)
+add_executable(test_rtp test_rtp.c )
+add_executable(test_rtp_connection test_rtp_connection.c)
 
 find_package(PkgConfig)
 
@@ -23,11 +25,11 @@ include_directories(test-endpoints kmsc-test-endpoints)
 target_link_libraries(test_sdp kmsclib)
 include_directories(test_sdp ${kmsc-endpoints_SOURCE_DIR}/src/core)
 
-target_link_libraries(test_rtp kmsclib)
+target_link_libraries(test_rtp kmsclib test_memory)
 include_directories(test_rtp ${kmsc-endpoints_SOURCE_DIR}/src/core)
 include_directories(test_rtp ${kmsc-endpoints_SOURCE_DIR}/src)
 
-target_link_libraries(test_rtp_connection kmsclib)
+target_link_libraries(test_rtp_connection kmsclib test_memory)
 include_directories(test_rtp_connection ${kmsc-endpoints_SOURCE_DIR}/src/core)
 include_directories(test_rtp_connection ${kmsc-endpoints_SOURCE_DIR}/src)
 
