Create a library for rtp test (avoding double compiling of files)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,12 +25,14 @@ include_directories(test-endpoints kmsc-test-endpoints)
 target_link_libraries(test_sdp kmsclib)
 include_directories(test_sdp ${kmsc-endpoints_SOURCE_DIR}/src/core)
 
-target_link_libraries(test_rtp kmsclib test_memory)
+target_link_libraries(test_rtp kmsclib test_memory rtp-test-lib)
 include_directories(test_rtp ${kmsc-endpoints_SOURCE_DIR}/src/core)
 include_directories(test_rtp ${kmsc-endpoints_SOURCE_DIR}/src)
 
-target_link_libraries(test_rtp_connection kmsclib test_memory)
+target_link_libraries(test_rtp_connection kmsclib test_memory rtp-test-lib)
 include_directories(test_rtp_connection ${kmsc-endpoints_SOURCE_DIR}/src/core)
 include_directories(test_rtp_connection ${kmsc-endpoints_SOURCE_DIR}/src)
 
 add_subdirectory(kmsc-test-endpoints)
+
+add_subdirectory(rtp-test-lib)
