--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,4 @@ enable_testing()
 add_test(test-endpoints1 test/test-endpoints)
 add_test(test_sdp test/test_sdp)
 add_test(test_rtp test/test_rtp)
-add_test(test_rtp test/test_rtp_connection)
+add_test(test_rtp_connection test/test_rtp_connection)
