Compile shared and static library for kmsc

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ aux_source_directory("core" CORE)
 aux_source_directory("rtp" RTP)
 
 add_library(kmsclib SHARED ${CORE} ${RTP})
+add_library(kmsclibst STATIC ${CORE} ${RTP})
 
 find_package(PkgConfig)
 
@@ -16,6 +17,7 @@ target_link_libraries(kmsclib ${GSTREAMER_LIBRARIES})
 include_directories(kmsclib core rtp)
 
 install(TARGETS kmsclib LIBRARY DESTINATION ${LIB_PREFIX} PERMISSIONS OWNER_EXECUTE OWNER_READ GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+install(TARGETS kmsclibst ARCHIVE DESTINATION ${LIB_PREFIX} PERMISSIONS OWNER_EXECUTE OWNER_READ GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
 
 file(GLOB INCLUDES_CORE "core/*.h")
 
