Create mixer endpoint a basic test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ add_test(test_sdp test/test_sdp)
 add_test(test_rtp test/test_rtp)
 add_test(test_rtp_connection test/test_rtp_connection)
 add_test(test_rtp_transmission test/test_rtp_transmission)
+add_test(test_mixer test/test_mixer)
