--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 2.8)
 
 aux_source_directory("core" CORE)
 aux_source_directory("rtp" RTP)
+aux_source_directory("mixer" MIXER)
 
-add_library(kmsclib SHARED ${CORE} ${RTP})
-add_library(kmsclibst STATIC ${CORE} ${RTP})
+add_library(kmsclib SHARED ${CORE} ${RTP} ${MIXER})
+add_library(kmsclibst STATIC ${CORE} ${RTP} ${MIXER})
 SET_TARGET_PROPERTIES(kmsclib kmsclibst PROPERTIES OUTPUT_NAME kmsc)
 
 find_package(PkgConfig)
@@ -27,3 +28,7 @@ install(FILES ${INCLUDES_CORE} DESTINATION ${INCLUDE_PREFIX} PERMISSIONS OWNER_R
 file(GLOB INCLUDES_RTP "rtp/*.h")
 
 install(FILES ${INCLUDES_RTP} DESTINATION ${INCLUDE_PREFIX}/rtp PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+
+file(GLOB INCLUDES_MIXER "mixer/*.h")
+
+install(FILES ${INCLUDES_MIXER} DESTINATION ${INCLUDE_PREFIX}/mixer PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
