Install rtmp files correctly

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,6 @@ file(GLOB INCLUDES_MIXER "mixer/*.h")
 
 install(FILES ${INCLUDES_MIXER} DESTINATION ${INCLUDE_PREFIX}/mixer PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
 
-file(GLOB INCLUDES_RTCP "rtcp/*.h")
+file(GLOB INCLUDES_RTMP "rtmp/*.h")
 
-install(FILES ${INCLUDES_RTCP} DESTINATION ${INCLUDE_PREFIX}/rtcp PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+install(FILES ${INCLUDES_RTMP} DESTINATION ${INCLUDE_PREFIX}/rtcp PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
