Fix another mistake in rtmp install

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,4 +41,4 @@ install(FILES ${INCLUDES_MIXER} DESTINATION ${INCLUDE_PREFIX}/mixer PERMISSIONS 
 
 file(GLOB INCLUDES_RTMP "rtmp/*.h")
 
-install(FILES ${INCLUDES_RTMP} DESTINATION ${INCLUDE_PREFIX}/rtcp PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+install(FILES ${INCLUDES_RTMP} DESTINATION ${INCLUDE_PREFIX}/rtmp PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
