--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 2.8)
 
 project(kmsc-endpoints)
 
+# TODO: Check if HAVE_INIT_TYPES_H has to be added (not in all systems)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_NETINET_IN_H -pedantic -Wall -DHAVE_INTTYPES_H -std=c++0x")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic -Wall -Werror -std=c99")
+
 set(CUSTOM_PREFIX "kmsc")
 set(INCLUDE_PREFIX "include/${CUSTOM_PREFIX}")
 set(LIB_PREFIX "lib")
@@ -11,8 +14,10 @@ find_package(PkgConfig)
 
 pkg_check_modules(GLIB2 REQUIRED glib-2.0>=2.30)
 pkg_check_modules(GSTREAMER REQUIRED gstreamer-0.10>=0.10.35)
+pkg_check_modules(THRIFT REQUIRED thrift>=0.8.0)
 
 add_subdirectory(src)
+add_subdirectory(server)
 
 add_subdirectory(test)
 
