Change boost thread library to glib thread library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(PkgConfig)
 pkg_check_modules(GLIB2 REQUIRED glib-2.0>=2.30)
 pkg_check_modules(GSTREAMER REQUIRED gstreamer-0.10>=0.10.35)
 pkg_check_modules(THRIFT REQUIRED thrift>=0.8.0)
+pkg_check_modules(GLIBMM REQUIRED glibmm-2.4>=2.30)
 
 add_subdirectory(src)
 add_subdirectory(server)
