--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -15,7 +15,7 @@ ExternalProject_Add(
 aux_source_directory("handlers" HANDLERS)
 aux_source_directory("managers" MANAGERS)
 
-SET(KMSC_SOURCE main.cpp ${HANDLERS} ${MANAGERS})
+SET(KMSC_SOURCE main.cpp log.cpp ${HANDLERS} ${MANAGERS})
 SET_SOURCE_FILES_PROPERTIES(${KMSC_SOURCE}
 		PROPERTIES COMPILE_FLAGS
 		-DHAVE_NETINET_IN_H -DUSE_BOOST_THREAD -DHAVE_INTTYPES_H)
