--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -31,9 +31,11 @@ add_library(mediaspec STATIC IMPORTED)
 set_target_properties(mediaspec PROPERTIES IMPORTED_LOCATION ${KMSIFACE_LIB_DIR}/libmediaspec.a)
 
 target_link_libraries(kmsc kmsiface mediaspec ${THRIFT_LIBRARIES})
-target_link_libraries(kmsc ${GSTREAMER_LIBRARIES} ${GLIBMM_LIBRARIES} kmsclibst)
+target_link_libraries(kmsc ${GSTREAMER_LIBRARIES} ${GLIBMM_LIBRARIES})
+target_link_libraries(kmsc ${UUID_LIBRARIES} kmsclibst)
 include_directories(kmsc ${THRIFT_INCLUDE_DIRS} ${GLIBMM_INCLUDE_DIRS})
 include_directories(kmsc ${GSTREAMER_INCLUDE_DIRS})
+include_directories(kmsc ${UUID_INCLUDE_DIRS})
 include_directories(kmsc ${KMSIFACE_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/server)
 include_directories(kmsc ${kmsc_SOURCE_DIR}/src/core)
 include_directories(kmsc ${kmsc_SOURCE_DIR}/src)
