Do not install kmsclib by now

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,24 +33,26 @@ set_target_properties(gmediaspec PROPERTIES IMPORTED_LOCATION ${KMSIFACE_LIB_DIR
 include_directories(kmsclib ${KMSIFACE_INCLUDE_DIR})
 target_link_libraries(kmsclib gmediaspec)
 
-install(TARGETS kmsclib ARCHIVE DESTINATION ${LIB_PREFIX} PERMISSIONS OWNER_EXECUTE OWNER_READ GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+# install(TARGETS kmsclib ARCHIVE DESTINATION ${LIB_PREFIX} PERMISSIONS OWNER_EXECUTE OWNER_READ GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
+#
+# file(GLOB INCLUDES_CORE "core/*.h")
+#
+# install(FILES ${INCLUDES_CORE} DESTINATION ${INCLUDE_PREFIX} PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+#
+# file(GLOB INCLUDES_RTP "rtp/*.h")
+#
+# install(FILES ${INCLUDES_RTP} DESTINATION ${INCLUDE_PREFIX}/rtp PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+#
+# file(GLOB INCLUDES_MIXER "mixer/*.h")
+#
+# install(FILES ${INCLUDES_MIXER} DESTINATION ${INCLUDE_PREFIX}/mixer PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+#
+# file(GLOB INCLUDES_RTMP "rtmp/*.h")
+#
+# install(FILES ${INCLUDES_RTMP} DESTINATION ${INCLUDE_PREFIX}/rtmp PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+#
+# file(GLOB INCLUDES_PLAYER "player/*.h")
+#
+# install(FILES ${INCLUDES_PLAYER} DESTINATION ${INCLUDE_PREFIX}/player PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
 
-file(GLOB INCLUDES_CORE "core/*.h")
-
-install(FILES ${INCLUDES_CORE} DESTINATION ${INCLUDE_PREFIX} PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
-
-file(GLOB INCLUDES_RTP "rtp/*.h")
-
-install(FILES ${INCLUDES_RTP} DESTINATION ${INCLUDE_PREFIX}/rtp PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
-
-file(GLOB INCLUDES_MIXER "mixer/*.h")
-
-install(FILES ${INCLUDES_MIXER} DESTINATION ${INCLUDE_PREFIX}/mixer PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
-
-file(GLOB INCLUDES_RTMP "rtmp/*.h")
-
-install(FILES ${INCLUDES_RTMP} DESTINATION ${INCLUDE_PREFIX}/rtmp PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
-
-file(GLOB INCLUDES_PLAYER "player/*.h")
-
-install(FILES ${INCLUDES_PLAYER} DESTINATION ${INCLUDE_PREFIX}/player PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+# TODO: Install includes from mediaspec or not install at all
