--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,26 +25,32 @@ include_directories(test-endpoints kmsc-test-endpoints)
 
 target_link_libraries(test_sdp kmsclib test_memory)
 include_directories(test_sdp ${kmsc_SOURCE_DIR}/src/core)
+include_directories(test_sdp ${KMSIFACE_INCLUDE_DIR})
 
 target_link_libraries(test_rtp kmsclib test_memory rtp-test-lib)
 include_directories(test_rtp ${kmsc_SOURCE_DIR}/src/core)
 include_directories(test_rtp ${kmsc_SOURCE_DIR}/src)
+include_directories(test_rtp ${KMSIFACE_INCLUDE_DIR})
+include_directories(test_rtp ${THRIFTC_INCLUDE_DIRS})
 
 target_link_libraries(test_rtp_connection kmsclib test_memory rtp-test-lib)
 include_directories(test_rtp_connection ${kmsc_SOURCE_DIR}/src/core)
 include_directories(test_rtp_connection ${kmsc_SOURCE_DIR}/src)
+include_directories(test_rtp_connection ${KMSIFACE_INCLUDE_DIR})
+include_directories(test_rtp_connection ${THRIFTC_INCLUDE_DIRS})
 
 target_link_libraries(test_rtp_transmission kmsclib test_memory rtp-test-lib)
 include_directories(test_rtp_transmission ${kmsc_SOURCE_DIR}/src/core)
 include_directories(test_rtp_transmission ${kmsc_SOURCE_DIR}/src)
+include_directories(test_rtp_transmission ${KMSIFACE_INCLUDE_DIR})
+include_directories(test_rtp_transmission ${THRIFTC_INCLUDE_DIRS})
 
 target_link_libraries(test_mixer kmsclib test_memory rtp-test-lib)
 include_directories(test_mixer ${kmsc_SOURCE_DIR}/src/core)
 include_directories(test_mixer ${kmsc_SOURCE_DIR}/src)
+include_directories(test_mixer ${KMSIFACE_INCLUDE_DIR})
+include_directories(test_mixer ${THRIFTC_INCLUDE_DIRS})
 
-target_link_libraries(test_rtmp kmsclib test_memory)
-include_directories(test_rtmp ${kmsc_SOURCE_DIR}/src/core)
-include_directories(test_rtmp ${kmsc_SOURCE_DIR}/src)
 # target_link_libraries(test_rtmp kmsclib test_memory)
 # include_directories(test_rtmp ${kmsc_SOURCE_DIR}/src/core)
 # include_directories(test_rtmp ${kmsc_SOURCE_DIR}/src)
