Improve the way tha transport config is loaded

--- a/kms.conf
+++ b/kms.conf
@@ -9,6 +9,9 @@ mixerPort=9093
 medias=audioRtp;videoRtp
 
 [Transport rtpTransport]
+rtp=rtpTransport
+
+[TransportRtp rtpTransport]
 address=localhost
 
 [Media videoRtp]
