Implement config loader for codec

--- a/kms.conf
+++ b/kms.conf
@@ -22,3 +22,33 @@ transport=rtpTransport
 codecs=amr;pcma
 transport=rtpTransport
 
+[Codec amr]
+rtp=amr
+
+[CodecRtp amr]
+name=AMR
+clockRate=8000
+channels=1
+extra=octet-align
+octet-align=1
+
+[Codec pcma]
+rtp=pcma
+
+[CodecRtp pcma]
+name=pcma
+clockRate=8000
+
+[Codec h263]
+rtp=h263
+
+[CodecRtp h263]
+name=h263-1998
+clockRate=90000
+
+[Codec mp4]
+rtp=mp4
+
+[CodecRtp mp4]
+name=mp4v-es
+clockRate=90000
