Load direction value for media from config

--- a/kms.conf
+++ b/kms.conf
@@ -17,10 +17,14 @@ address=localhost
 [Media videoRtp]
 codecs=h263;mp4
 transport=rtpTransport
+direction=sendonly
+type=video
 
 [Media audioRtp]
 codecs=amr;pcma
 transport=rtpTransport
+direction=sendrecv
+type=audio
 
 [Codec amr]
 rtp=amr
