Create utils function to transform a c++ sesion spec into a C one

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -2,7 +2,7 @@ aux_source_directory("handlers" HANDLERS)
 aux_source_directory("managers" MANAGERS)
 aux_source_directory("types" TYPES)
 
-SET(KMSC_SOURCE main.cpp log.cpp media_config_loader.cpp ${HANDLERS}
+SET(KMSC_SOURCE main.cpp log.cpp media_config_loader.cpp utils.cpp ${HANDLERS}
 							${MANAGERS} ${TYPES})
 SET_SOURCE_FILES_PROPERTIES(${KMSC_SOURCE}
 		PROPERTIES COMPILE_FLAGS
