Print server version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,21 @@ cmake_minimum_required(VERSION 2.8)
 
 project(kmsc)
 
+if(EXISTS "${CMAKE_SOURCE_DIR}/.git")
+	execute_process(COMMAND git describe --abbrev=6 --tags --dirty --always
+			OUTPUT_VARIABLE KMSC_VERSION
+			OUTPUT_STRIP_TRAILING_WHITESPACE)
+	string(REGEX REPLACE "^kmsc-(.*)" "\\1" KMSC_VERSION ${KMSC_VERSION})
+else(EXISTS "${CMAKE_SOURCE_DIR}/.git")
+	set(KMSC_MAJOR_VERSION 0)
+	set(KMSC_MINOR_VERSION 1)
+	set(KMSC_PATCH_VERSION 0-dev)
+	set(KMSC_VERSION
+		${KMSC_MAJOR_VERSION}.${KMSC_MINOR_VERSION}.${KMSC_PATCH_VERSION})
+endif(EXISTS "${CMAKE_SOURCE_DIR}/.git")
+
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
+
 # TODO: Check if HAVE_INIT_TYPES_H has to be added (not in all systems)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Wall -Werror -std=c++0x")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic -Wall -Werror -std=c99")
