--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -14,6 +14,7 @@ add_dependencies(kmsc kmsiface-project)
 target_link_libraries(kmsc kmsiface mediaspec ${THRIFT_LIBRARIES})
 target_link_libraries(kmsc ${GSTREAMER_LIBRARIES} ${GLIBMM_LIBRARIES})
 target_link_libraries(kmsc ${UUID_LIBRARIES} kmsclib)
+include_directories(kmsc ${kmsc_BINARY_DIR})
 include_directories(kmsc ${THRIFT_INCLUDE_DIRS} ${GLIBMM_INCLUDE_DIRS})
 include_directories(kmsc ${GSTREAMER_INCLUDE_DIRS})
 include_directories(kmsc ${UUID_INCLUDE_DIRS})
