Install configure file in configure directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,4 +75,10 @@ SET(CPACK_PACKAGE_NAME "kmsc")
 SET(CPACK_PACKAGE_VENDOR "Kurento")
 SET(CPACK_PACKAGE_VERSION ${KMSC_VERSION})
 
+if(NOT DEFINED SYSCONFDIR)
+	set(SYSCONFDIR etc)
+endif(NOT DEFINED SYSCONFDIR)
+
+install(FILES kms.conf DESTINATION ${SYSCONFDIR})
+
 include(CPack)
