Add license to project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,9 +71,10 @@ add_test(test_server test/test_server)
 set(CPACK_GENERATOR "DEB;TGZ;STGZ")
 set(CPACK_PACKAGE_CONTACT "kurento@googlegroups.com")
 
-SET(CPACK_PACKAGE_NAME "kmsc")
-SET(CPACK_PACKAGE_VENDOR "Kurento")
-SET(CPACK_PACKAGE_VERSION ${KMSC_VERSION})
+set(CPACK_PACKAGE_NAME "kmsc")
+set(CPACK_PACKAGE_VENDOR "Kurento")
+set(CPACK_PACKAGE_VERSION ${KMSC_VERSION})
+set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/license.txt)
 
 if(NOT DEFINED SYSCONFDIR)
 	set(SYSCONFDIR etc)
