Change test_server codecs to use h264 reception

--- a/kms.conf
+++ b/kms.conf
@@ -15,9 +15,9 @@ rtp=rtpTransport
 address=localhost
 
 [Media videoRtp]
-codecs=h263;mp4
+codecs=h263;mp4;h264
 transport=rtpTransport
-direction=sendonly
+direction=sendrecv
 type=video
 
 [Media audioRtp]
@@ -55,4 +55,11 @@ rtp=mp4
 
 [CodecRtp mp4]
 name=mp4v-es
+clockRate=90000
+
+[Codec h264]
+rtp=h264
+
+[CodecRtp h264]
+name=h264
 clockRate=90000
