Prepare to release 1.0.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ if(EXISTS "${CMAKE_SOURCE_DIR}/.git")
 			OUTPUT_STRIP_TRAILING_WHITESPACE)
 	string(REGEX REPLACE "^kmsc-(.*)" "\\1" KMSC_VERSION ${KMSC_VERSION})
 else(EXISTS "${CMAKE_SOURCE_DIR}/.git")
-	set(KMSC_MAJOR_VERSION 0)
-	set(KMSC_MINOR_VERSION 1)
-	set(KMSC_PATCH_VERSION 0-dev)
+	set(KMSC_MAJOR_VERSION 1)
+	set(KMSC_MINOR_VERSION 0)
+	set(KMSC_PATCH_VERSION 0)
 	set(KMSC_VERSION
 		${KMSC_MAJOR_VERSION}.${KMSC_MINOR_VERSION}.${KMSC_PATCH_VERSION})
 endif(EXISTS "${CMAKE_SOURCE_DIR}/.git")
