--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(test_rtp_connection test_rtp_connection.c)
 add_executable(test_rtp_transmission test_rtp_transmission.c)
 add_executable(test_mixer test_mixer.c)
 add_executable(test_server test_server.cpp)
-#add_executable(test_rtmp test_rtmp.c)
+add_executable(test_rtmp test_rtmp.c)
 
 find_package(PkgConfig)
 
@@ -52,11 +52,11 @@ include_directories(test_mixer ${kmsc-project_SOURCE_DIR}/src)
 include_directories(test_mixer ${KMSIFACE_INCLUDE_DIR})
 include_directories(test_mixer ${THRIFTC_INCLUDE_DIRS})
 
-# target_link_libraries(test_rtmp kmsclib test_memory)
-# include_directories(test_rtmp ${kmsc-project_SOURCE_DIR}/src/core)
-# include_directories(test_rtmp ${kmsc-project_SOURCE_DIR}/src)
-# include_directories(test_rtmp ${KMSIFACE_INCLUDE_DIR})
-# include_directories(test_rtmp ${THRIFTC_INCLUDE_DIRS})
+target_link_libraries(test_rtmp kmsclib test_memory)
+include_directories(test_rtmp ${kmsc-project_SOURCE_DIR}/src/core)
+include_directories(test_rtmp ${kmsc-project_SOURCE_DIR}/src)
+include_directories(test_rtmp ${KMSIFACE_INCLUDE_DIR})
+include_directories(test_rtmp ${THRIFTC_INCLUDE_DIRS})
 
 target_link_libraries(test_server kmsiface mediaspec ${THRIFT_LIBRARIES})
 include_directories(test_server ${KMSIFACE_INCLUDE_DIR})
