Allow rtmp capabilities to server configuration

--- a/kms.conf
+++ b/kms.conf
@@ -6,13 +6,19 @@ sessionPort=9091
 connectionPort=9092
 mixerPort=9093
 
-medias=audioRtp;videoRtp
+medias=audioRtp;videoRtp;audioRtmp;videoRtmp
 
 [Transport rtpTransport]
 rtp=rtpTransport
 
+[Transport rtmpTransport]
+rtmp=rtmpTransport
+
 [TransportRtp rtpTransport]
 address=localhost
+
+[TransportRtmp rtmpTransport]
+url=rtmp://flashserver/application
 
 [Media videoRtp]
 codecs=h263;mp4;h264
@@ -23,6 +29,18 @@ type=video
 [Media audioRtp]
 codecs=amr;pcma
 transport=rtpTransport
+direction=sendrecv
+type=audio
+
+[Media videoRtmp]
+codecs=h263;mp4;h264
+transport=rtmpTransport
+direction=sendrecv
+type=video
+
+[Media audioRtmp]
+codecs=amr;pcma
+transport=rtmpTransport
 direction=sendrecv
 type=audio
 
