Create nice agents for audio and video on rtpConnection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ pkg_check_modules(GSTREAMER REQUIRED gstreamer-0.10>=0.10.36)
 pkg_check_modules(THRIFT REQUIRED thrift>=0.8.0)
 pkg_check_modules(THRIFTC REQUIRED thrift_c_glib>=0.8.0)
 pkg_check_modules(GLIBMM REQUIRED glibmm-2.4>=2.30)
+pkg_check_modules(NICE REQUIRED nice>=0.1.1)
 
 include(ExternalProject)
 
