--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -8,18 +8,18 @@ SET_SOURCE_FILES_PROPERTIES(${KMSC_SOURCE}
 		PROPERTIES COMPILE_FLAGS
 		-DHAVE_NETINET_IN_H -DUSE_BOOST_THREAD -DHAVE_INTTYPES_H)
 
-add_executable(kmsc ${KMSC_SOURCE})
-add_dependencies(kmsc kmsiface-project)
+add_executable(kurento ${KMSC_SOURCE})
+add_dependencies(kurento kmsiface-project)
 
-target_link_libraries(kmsc kmsiface mediaspec ${THRIFT_LIBRARIES})
-target_link_libraries(kmsc ${GSTREAMER_LIBRARIES} ${GLIBMM_LIBRARIES})
-target_link_libraries(kmsc ${UUID_LIBRARIES} kmsclib)
-include_directories(kmsc ${kmsc-project_BINARY_DIR})
-include_directories(kmsc ${THRIFT_INCLUDE_DIRS} ${GLIBMM_INCLUDE_DIRS})
-include_directories(kmsc ${GSTREAMER_INCLUDE_DIRS})
-include_directories(kmsc ${UUID_INCLUDE_DIRS})
-include_directories(kmsc ${KMSIFACE_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/server)
-include_directories(kmsc ${kmsc-project_SOURCE_DIR}/src/core)
-include_directories(kmsc ${kmsc-project_SOURCE_DIR}/src)
+target_link_libraries(kurento kmsiface mediaspec ${THRIFT_LIBRARIES})
+target_link_libraries(kurento ${GSTREAMER_LIBRARIES} ${GLIBMM_LIBRARIES})
+target_link_libraries(kurento ${UUID_LIBRARIES} kmsclib)
+include_directories(kurento ${kmsc-project_BINARY_DIR})
+include_directories(kurento ${THRIFT_INCLUDE_DIRS} ${GLIBMM_INCLUDE_DIRS})
+include_directories(kurento ${GSTREAMER_INCLUDE_DIRS})
+include_directories(kurento ${UUID_INCLUDE_DIRS})
+include_directories(kurento ${KMSIFACE_INCLUDE_DIR} ${CMAKE_SOURCE_DIR}/server)
+include_directories(kurento ${kmsc-project_SOURCE_DIR}/src/core)
+include_directories(kurento ${kmsc-project_SOURCE_DIR}/src)
 
-install(TARGETS kmsc RUNTIME DESTINATION bin)
+install(TARGETS kurento RUNTIME DESTINATION usr/bin)
